--- a/articulo.Rmd
+++ b/articulo.Rmd
@@ -4,7 +4,7 @@ author: "Emilio L. Cano, María Jesús Algar, Antonio Alonso-Ayuso, Javier M. Mo
 date: "`r Sys.Date()`"
 output: html_document
 bibliography: [article.bib, packages.bib]
-biblio-style: vancouver
+csl: sage-vancouver-brackets.csl
 ---
 
 ```{r setup, include=FALSE}
