Estado del arte v1

--- a/articulo.Rmd
+++ b/articulo.Rmd
@@ -45,6 +45,19 @@ En el Grupo de Innovación Docente "Laboratorio de Ciencia de Datos para la Inno
 
 (falta entero) buscar cosas de matlab, y otros softwares, y por supuesto de R.
 
+En la literatura podemos encontrar numerosos trabajos que abogan por orientar la enseñanza de la estadística desde un enforque más práctico, disminuyendo en cierta medida el enforque teórico que se le da a esta materia. Tradicionalmente, en Europa, se ha optado por enseñar la estadística desde un punto de vista más teórico, otorgando de una gran relevancia a los teoremas y sus correspondientes demostraciones teóricas. Sin embargo, el enforque que se le ha dado en EEUU es más práctico. Presentan la materia como una herramienta de investigación muy versátil, en el sentido de que se aplica en multitud de áreas de conocimiento: ingeniería, medicina, economía, psicología, periodismo, sociología, etc.
+
+Con el fin de darle más énfasis a un enfoque práctico de la estadística, una solución accesible es optar por el uso de una herramienta informática. El abanico de opciones es tan amplio que conviene realizar un análisis detallado de algunas de ellas:
+
+-	Statistical análisis System
+-	(SPSS). Se trata de otro software comercial de análisis estadístico muy completo y avanzado. Por lo que no está pensado para usuarios noveles. Es ampliamente usado en el ámbito profesional. 
+-	Minitab. Es un potente software de pago para análisis estadístico. Fue desarrollado en la Universidad del Estado de Pensilvania por Barbara F. Ryan, Thomas A. Ryan, Jr. Y Brian L. Joiner en 1972. Está más enfocado a un uso empresarial que didáctico. Lo cual no quita que se hayan llevado a cabo experiencias docentes 
+-	Statistics Problem Solver. Es un software informático que además de resolver los problemas de estadística, ofrece una explicación paso a paso sobre como se ha resulto, mostrando las fórmulas y teoremas que se han empleado en el proceso. Tan solo hay que rellenar los cuadros en blanco con los datos del problema que queremos resolver. Está diseñado en base al curso de “Estadística y Probabilidad” de la Universidad de Ottawa (MAT2377), por lo que es especialmente recomendable para estudiantes universitarios. Los algoritmos de solución que emplea el software están basados en el libro “Métodos estadísticos para ingenieros” de G. Geoffrey Vining, Duxbury, 1998. Con este software se pueden generar histogramas, analizar distribuciones discretas y continuas, realizar pruebas de hipótesis y comparar datos estadísticos.
+-	Stats Solver. La principal diferencia con el anterior es que no requiere de ninguna instalación ya que se trata de una página web. Solo necesitamos tener un navegador web y acceder a la página. En el menú desplegable que aparece en la parte superior se selecciona el tipo de problema estadístico que se quiere resolver y, a continuación, se introducen los datos en los cuadros de texto en blanco. Al presionar en Solve, nos muestra la solución junto con una explicación teórica de cómo debe resolverse. En este sentido, podemos decir que es una herramienta muy didáctica y fácil de usar. 
+-	R. Es un lenguaje de programación estadístico. La primera versión fue creada en la Universidad de Auckland, Nueva Zelanda en la década de los 90 por Robert Gentleman y Robert Ihaka. En la actualidad se considera la herramienta de análisis estadístico por excelencia, ampliamente utilizada tanto en el ámbito docente como en el empresarial.
+
+Todas estas herramientas de ordenador han sido diseñadas con un propósito general, poder resolver problemas estadísticos. En este sentido podemos decir que cumplen con creces su propósito. Pero este no es nuestro objetivo. No buscamos una herramienta de computo potente que nos permita llevar a cabo cualquier análisis estadístico, sino que lo que buscamos es una herramienta didáctica que ayude a nuestros estudiantes a entender la estadística y saber aplicarla a la vida real. Por este motivo hemos desarrollado nuestra propia herramienta. Queremos proporcionar a los estudiantes una experiencia que les permita entender el concepto de XX. Lo cual conseguimos mediante la implementación de una aplicación interactiva. 
+
 Un poco de autobombo: [@Cano2016]
 
 Citar R y paquetes: [@R-base], [@R-shiny], ...
