Estado del arte con bibliografia

--- a/article.bib
+++ b/article.bib
@@ -9,3 +9,63 @@
    title = {Applying Scrum to Organise University Degrees Coursework},
    year = {2016},
 }
+
+@article{Romeu1998,
+  author = {Jorge Luis Romeu and Vicente Gascon Gascon},
+  title ={Minitab and Pizza: A Workshop Experiment},
+  journal = {Journal of Educational Technology Systems},
+  volume = {27},
+  number = {2},
+  pages = {163-168},
+  year = {1998},
+  doi = {10.2190/CLM0-PMNG-CEWW-7DCU}
+}
+
+@article{Romeu2006,
+  title={Teaching engineering statistics to practicing engineers},
+  author={Romeu, Jorge Luis},
+  journal={Proceedings of ICOTS-7. Salvador (Bahia): International Association for Statistical Education. CDROM},
+  year={2006}
+}
+
+@article{Moore1997,
+  title={New pedagogy and new content: The case of statistics},
+  author={Moore, David S},
+  journal={International statistical review},
+  volume={65},
+  number={2},
+  pages={123--137},
+  year={1997},
+  publisher={Wiley Online Library}
+}
+
+@article{Hogg1985,
+  title={Statistical education for engineers: an initial task force report},
+  author={Hogg, Robert V},
+  journal={The American Statistician},
+  volume={39},
+  number={3},
+  pages={168--175},
+  year={1985},
+  publisher={Taylor \& Francis}
+}
+
+@article{Romeu2006,
+  title={Teaching engineering statistics to practicing engineers},
+  author={Romeu, Jorge Luis},
+  journal={Proceedings of ICOTS-7. Salvador (Bahia): International Association for Statistical Education. CDROM},
+  year={2006}
+}
+
+@article{Romeu2012,
+  title={On the statistics education of American engineers},
+  author={Romeu, JL},
+  journal={Journal of the RIAC (Reliability Information Analysis Center) Rome, NY},
+  year={2012}
+}
+
+@article{El1990,
+  title={La ense{\~n}anza de la Estad{\'\i}stica en las Escuelas T{\'e}cnicas},
+  author={EL PE{\~N}A, DANI and Prat, Albert and ERO, RAFAEL ROM},
+  year={1990}
+}
